# auth-system

./: .env.example  .gitignore  .pre-commit-config.yaml  AUTH_SYSTEM_COMPREHENSIVE_REVIEW_REPORT.md  CI-CD-SETUP.md  CODE_REFACTORING_REPORT.md  COMPREHENSIVE_SECURITY_REVIEW.md  CONNECTION_POOL_OPTIMIZATION.md  DEPLOYMENT_GUIDE.md  HIGH_PRIORITY_FIXES_SUMMARY.md  PERFORMANCE_OPTIMIZATION_FINAL_REPORT.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  QUICK_START_DEPLOY.md  README.md  REDIS_CACHING_IMPLEMENTATION.md  REVIEW_FINDINGS_ACTION_PLAN.md  WINDOW_FUNCTION_PAGINATION.md  check-agents-status.sh  dashboard-agents.sh  docker-compose.yml  monitor-agents-pretty.sh  monitor-agents-simple.sh  monitor-agents.sh
auth-sdk/: README.md  pyproject.toml
auth-sdk/src/auth_sdk/: __init__.py  client.py  config.py  dependencies.py  exceptions.py  jwks.py  middleware.py  models.py
auth-service/: .env.backpressure.example  .env.example  .env.test  .env.test.fixed  .gitignore  .pre-commit-config.yaml  AUDIT_LOGGING_GUIDE.md  BACKPRESSURE_QUEUE_DESIGN.md  CLAUDE.md  CSRF_PROTECTION_GUIDE.md  Dockerfile  ERROR_HANDLING_GUIDE.md  INTEGRATION_TEST_IMPROVEMENTS.md  N_PLUS_ONE_MITIGATION.md  README.md  RUN_PRODUCTION.md  TRAFFIC_SCALABILITY_REPORT.md  docker-compose.yml  pyproject.toml  pyproject.toml.append  test_backpressure.py  test_backpressure_real.py  test_backpressure_simple.py
auth-service/docs/: QUICKSTART.md  edge-case-testing-guide.md  refactoring-summary.md  solid-cache-guide.md  solid-cache-implementation-summary.md  test-coverage-analysis.md
auth-service/docs/performance/: task10-join-index-analysis.md  task8-ilike-optimization.md  task9-caching-and-pool-optimization.md
auth-service/docs/prd/: index.md
auth-service/docs/prd/common/: common.md
auth-service/docs/prd/endpoints/: _template.md
auth-service/docs/testing/: integration-test-infrastructure-improvements.md
auth-service/scripts/: dashboard.sh  init.sql  monitor-simple.sh  monitor-system.sh  monitor-tests.sh  monitor.sh  start-with-monitor.sh  verify_security_headers.py  verify_solid_cache.py
auth-service/scripts/migrations/: 001_add_performance_indexes.sql  002_add_refresh_token_index.sql  003_add_trigram_indexes.sql  004_add_audit_logs.sql  005_add_solid_cache.sql
auth-service/src/: main.py
auth-service/src/domains/authentication/: __init__.py  repository.py  router.py  schemas.py  service.py
auth-service/src/domains/users/: __init__.py  repository.py  router.py  schemas.py  service.py
auth-service/src/shared/: constants.py  dependencies.py  exceptions.py  logging.py  schemas.py
auth-service/src/shared/database/: __init__.py  connection.py  solid_cache.py  transaction.py  (+1 more)
auth-service/tests/: conftest.py
auth-service/tests/integration/: test_auth_api.py  test_auth_repository.py  test_authentication_router.py  test_dependencies_integration.py  test_rate_limiter_integration.py  test_users_api.py  test_users_repository.py
auth-service/tests/load/: DELIVERABLE_SUMMARY.md  PERFORMANCE_ANALYSIS.md  README.md  __init__.py  locustfile.py  quick_test.sh  requirements.txt
auth-service/tests/system/: PERFORMANCE_TEST_README.md  TEST_REPORT.md  __init__.py  test_api_endpoints.py  test_integration.py  test_performance.py  test_plan.md  test_security.py  test_solid_cache.py
auth-service/tests/unit/: test_audit_logger.py  test_auth_repository.py  test_auth_service.py  test_backpressure.py  test_client_ip.py  test_constants.py  test_csrf_protection.py  test_dependencies.py  test_jwt_handler.py  test_password_hasher.py  test_rate_limiter.py  test_redis_store.py  test_security_config.py  test_security_headers.py  test_sql_loader.py  test_transaction.py  test_users_repository.py  test_users_service.py
(+59 files in other folders)
