[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auth-service"
version = "0.1.0"
description = "MSA 인증/인가 서비스 - OAuth 2.0 + OIDC"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    # 인증/보안
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5.0,>=4.3.0",  # passlib 호환을 위해 4.x 고정
    "cryptography>=42.0.0",
    # Redis
    "redis[hiredis]>=5.0.0",
    # OAuth
    "httpx>=0.27.0",
    # MFA (TOTP)
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.0",
    # Logging
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.0",
    "fakeredis>=2.20.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "psutil>=5.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "PTH", "ERA", "PL", "RUF", "ASYNC", "S"]
ignore = [
    "E501",      # line too long (handled by formatter)
    "PLR0913",   # too many arguments
    "PLR2004",   # magic value
    "B008",      # function call in argument defaults (FastAPI Depends pattern)
    "B904",      # raise from err (not critical)
    "ARG001",    # unused arguments (FastAPI handlers, exception handlers)
    "B019",      # lru_cache on method (acceptable here)
    "PLC0415",   # import not at top (acceptable for conditional imports)
    "ERA001",    # commented code (we keep future domain placeholders)
    "E402",      # module import not at top (acceptable after app init)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S110", "S311", "S608", "ARG", "B023", "F811", "S105", "S106"]  # test-specific ignores
"src/shared/security/config.py" = ["S105"]  # dev secret key
"src/domains/authentication/service.py" = ["S106"]  # token_type literal

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.0",
]
